--- a/app/src/main/res/layout/activity_buy_medicine_details.xml
+++ b/app/src/main/res/layout/activity_buy_medicine_details.xml
@@ -60,19 +60,22 @@
         android:id="@+id/editTextTextBMDMultiLine"
         android:layout_width="300dp"
         android:layout_height="347dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="12dp"
         android:gravity="start|top"
         android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewBMDPackageName" />
 
     <TextView
         android:id="@+id/textViewBMDTotalCost"
-        android:layout_width="132dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="36dp"
+        android:layout_width="152dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="12dp"
         android:text="TextView"
+        android:textAlignment="center"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
