--- a/app/src/main/res/layout/activity_cart_buy_medicine.xml
+++ b/app/src/main/res/layout/activity_cart_buy_medicine.xml
@@ -9,10 +9,12 @@
 
     <TextView
         android:id="@+id/textViewBMCartTotalCost"
-        android:layout_width="145dp"
+        android:layout_width="194dp"
         android:layout_height="33dp"
         android:layout_marginTop="16dp"
         android:text="Total Cost: 2000/-"
+        android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/listViewBMCart" />
@@ -21,13 +23,12 @@
         android:id="@+id/buttonBMCartCheckout"
         android:layout_width="118dp"
         android:layout_height="48dp"
-        android:layout_marginStart="76dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="52dp"
         android:text="Checkout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonBMCartDate"
-        app:layout_constraintVertical_bias="0.685" />
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
+        app:layout_constraintVertical_bias="0.673" />
 
     <TextView
         android:id="@+id/textViewDDName"
@@ -57,9 +58,8 @@
         android:id="@+id/listViewBMCart"
         android:layout_width="347dp"
         android:layout_height="295dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewBMTitle3">
 
@@ -67,26 +67,25 @@
 
     <Button
         android:id="@+id/buttonBMCartBack"
-        android:layout_width="104dp"
-        android:layout_height="48dp"
-        android:layout_marginEnd="68dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="121dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="32dp"
         android:text="Back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.829"
         app:layout_constraintStart_toEndOf="@+id/buttonBMCartCheckout"
         app:layout_constraintTop_toBottomOf="@+id/buttonBMCartDate"
-        app:layout_constraintVertical_bias="0.685" />
+        app:layout_constraintVertical_bias="0.117" />
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="140dp"
-        android:layout_height="23dp"
+        android:layout_width="149dp"
+        android:layout_height="29dp"
+        android:layout_marginStart="52dp"
         android:layout_marginTop="16dp"
         android:text="Select Delivery Date"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewBMCartTotalCost" />
 
@@ -94,11 +93,11 @@
         android:id="@+id/buttonBMCartDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         android:text="21/10/2023"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintHorizontal_bias="0.474"
+        app:layout_constraintStart_toEndOf="@+id/textView7"
+        app:layout_constraintTop_toBottomOf="@+id/textViewBMCartTotalCost" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
